<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>at.htlhl.carconf</groupId>
    <artifactId>CarConfiguratorFX</artifactId>
    <version>1.0.0</version>
    <name>CarConfiguratorFX</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.8.2</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>17.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.4.2</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <arg>
                            --add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls
                        </arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <jlinkImageName>${project.artifactId}</jlinkImageName>
                    <launcher>${project.artifactId}</launcher>
                    <mainClass>at.htlhl.carconf/at.htlhl.carconf.App</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>
                                at.htlhl.carconf/at.htlhl.carconf.App
                            </mainClass>
                            <!--
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                            -->
                            <options>
                                <option>
                                    --add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls
                                </option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <jlinkImageName>${project.artifactId}</jlinkImageName>
                    <launcher>${project.artifactId}</launcher>
                    <mainClass>at.htlhl.carconf/at.htlhl.carconf.App</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>
                                at.htlhl.carconf/at.htlhl.carconf.App
                            </mainClass>
                            <!--<launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>-->
                            <options>
                                <option>
                                    --add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls
                                </option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <name>${project.artifactId}</name>
                    <appVersion>${project.version}</appVersion>
                    <vendor>at.htlhl</vendor>
                    <module>at.htlhl.carconf/at.htlhl.carconf.App</module>
                    <runtimeImage>target/CarConfiguratorFX</runtimeImage>
                    <type>APP_IMAGE</type>
                    <destination>target/dist</destination>
                    <!--
                    <winMenu>true</winMenu>
                    <winShortcut>true</winShortcut>
                    <winDirChooser>true</winDirChooser>
                    -->
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>